# snapkitty-nemotron-harness

./: .env.example  .gitignore  LICENSE  Modelfile  README.md  harness.config.json  index.html  package-lock.json  package.json  server.ts  trust-deed.json  tsconfig.json  vite.config.ts
.github/workflows/: deploy.yml
apps/web/: package-lock.json  package.json
apps/web/src/: App.tsx
apps/web/src/components/: GateResult.tsx  ModelStatus.tsx  PromptConsole.tsx  ReceiptDrawer.tsx  ReplayPanel.tsx  SyscallTrace.tsx
examples/: audit.prompt.txt  build.prompt.txt  prove.prompt.txt  search.prompt.txt
kernel/: ere_gate.pl  plasma_gate.pl  syscalls.pl
kernel/sovereign_crypto/: Cargo.toml
kernel/sovereign_crypto/include/: sovereign_crypto.h
kernel/sovereign_crypto/src/: main.rs
kernel/sovereign_crypto/src/crypto/: mod.rs
kernel/sovereign_crypto/src/ffi/: mod.rs
lean4/: GateExamples.lean  ThermalGate.lean
prompts/: executor-mode.md  syscall-policy.md  system.snap.md
src/: App.tsx  config.ts  harness.ts  normalize.ts  ollama.ts  policyGate.ts  receipt.ts  router.ts  syscall.ts  trustDeed.ts  types.d.ts
src/components/: GateResult.tsx  LeanGatePanel.tsx  ModelPanel.tsx  ModelStatus.tsx  PersonaPanel.tsx  PolicyGatePanel.tsx  PromptConsole.tsx  ReceiptDrawer.tsx  ReplayPanel.tsx  SyscallTrace.tsx  ToolGatePanel.tsx  ToolOutput.tsx
src/gates/: leanStaticGate.ts  prologGate.ts
src/lib/: api.ts  ollama.ts  prolog.ts  receipt.ts  syscall.ts
tests/: policyGate.test.ts
